edit logo on login and registration

--- a/server/app/templates/login.html
+++ b/server/app/templates/login.html
@@ -20,7 +20,7 @@
       <div class="container">
         <div class="main-logo">
           <a href="/">
-            <img src="../static/images/white-logo.svg" alt="white-logo" />
+            <img src="../static/Logo_Fit_it/Logo_Fit_it.png" style="height: 65px; width: 220px" alt="logo" />
           </a>
         </div>
       </div>
