--- a/server/app/templates/register.html
+++ b/server/app/templates/register.html
@@ -19,7 +19,7 @@
     <div class="top-logo-part">
       <div class="container">
         <div class="main-logo">
-          <img src="../static/images/white-logo.svg" alt="white-logo" />
+          <img src="../static/Logo_Fit_it/Logo_Fit_it.png" style="height: 65px; width: 220px" alt="logo" />
         </div>
       </div>
     </div>
