--- a/server/app/templates/workout-start.html
+++ b/server/app/templates/workout-start.html
@@ -69,10 +69,7 @@
         <div class="workout-name-wrap">
           <h5 type="exercise-name">Планка</h5>
           <div class="video-wrap">
-            <video src="" class="img-responsive" autoplay muted>
-              <source src="" id="helper-video" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
+            <img src="" id="helper-video" class="img-responsive" />
           </div>
           <button class="btn" id="complete-btn">Завершить</button>
         </div>
