--- a/server/app/templates/workout-start.html
+++ b/server/app/templates/workout-start.html
@@ -89,6 +89,9 @@
       <!-- Modal content -->
       <div class="modal-content">
         <canvas style="padding: 0; display: block; margin: 0 auto;" id="canvas"></canvas>
+        <div id="download-container" style="text-align: center; margin-top: 10px;">
+      <!-- Здесь будет отображаться кнопка для скачивания скриншота -->
+    </div>
       </div>
     </div>
 
