--- a/server/app/templates/profile.html
+++ b/server/app/templates/profile.html
@@ -215,7 +215,7 @@
 
       if (activityLevel != "0") {
         document.getElementById(
-          btn-activity-level-${activityLevel}
+          `btn-activity-level-${activityLevel}`
         ).style.backgroundColor = "#958be4";
       }
     </script>
