--- a/server/app/templates/login.html
+++ b/server/app/templates/login.html
@@ -27,9 +27,22 @@
     </div>
     <div class="main-login-section">
       <div class="container">
-        <div class="login-image">
-          <img src="./static/images/login-image.jpg" alt="" class="img-responsive" />
-        </div>
+        <style>
+      .login-image {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 60vh;
+      }
+        </style>
+
+      <div class="login-image">
+        <video width="700" height="400" controls>
+          <source src="../static/fit.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+      </div>
+
         <div class="topic text-center">
           <h6>
             Персональный тренер - нейросеть 24/7. Тренируйся где и когда тебе
