--- a/server/app/templates/login.html
+++ b/server/app/templates/login.html
@@ -38,7 +38,7 @@
 
       <div class="login-image">
         <video width="700" height="400" controls>
-          <source src="../static/fit.mp4" type="video/mp4">
+          <source src="../static/fitai.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
       </div>
