--- a/server/app/templates/profile.html
+++ b/server/app/templates/profile.html
@@ -39,7 +39,7 @@
               <input
                 type="file"
                 id="file-input"
-                accept="image/*"
+                accept=".jpg,.jpeg,.png,.heic,.heif,image/*"
                 style="display: none"
               />
               {% if user.profile_picture_url %}
@@ -66,7 +66,7 @@
             </button>
           </div>
         </div>
-        <div class="profile-details">
+        <div class="profile-details">`
           <ul>
             <li>
               <h6>Имя</h6>
