video fix fullscreen

--- a/server/app/templates/login.html
+++ b/server/app/templates/login.html
@@ -37,7 +37,7 @@
         </style>
 
       <div class="login-image">
-        <video width="700" height="400" controls>
+        <video width="700" height="400" controls playsinline>
           <source src="../static/fit1.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
