--- a/server/app/templates/login.html
+++ b/server/app/templates/login.html
@@ -28,7 +28,7 @@
     <div class="main-login-section">
       <div class="container">
         <div class="login-image">
-          <video width="700" height="400" controls playsinline>
+          <video controls playsinline>
             <source src="../static/fit1.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
