--- a/server/app/static/css/style.css
+++ b/server/app/static/css/style.css
@@ -2270,21 +2270,21 @@ details {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: auto; /* Вместо фиксированной высоты используем автоматическую */
+  /* Удалим высоту, чтобы контейнер автоматически подстраивался под содержимое */
 }
 
 .login-image video {
-  width: 100%; /* Видео адаптируется по ширине контейнера */
-  height: auto; /* Высота будет автоматически подстраиваться для сохранения пропорций */
-  max-width: 700px; /* Ограничиваем максимальную ширину видео на больших экранах */
+  max-width: 100%; /* Ограничим ширину видео, чтобы оно не выходило за пределы экрана */
+  height: auto; /* Автоматически подстраиваем высоту для сохранения пропорций */
 }
 
 @media (max-width: 768px) {
   .login-image video {
-    width: 100%; /* На мобильных устройствах видео занимает всю ширину контейнера */
-    height: auto; /* Пропорции сохраняются автоматически */
+    width: 100%; /* На мобильных устройствах видео будет занимать всю ширину контейнера */
+    height: auto; /* Пропорции видео сохранятся */
   }
 }
+
 
 
 /*# sourceMappingURL=style.css.map */
