--- a/server/app/static/css/style.css
+++ b/server/app/static/css/style.css
@@ -2270,20 +2270,23 @@ details {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* Удалим высоту, чтобы контейнер автоматически подстраивался под содержимое */
+  height: auto; /* Устанавливаем авто высоту контейнера */
 }
 
 .login-image video {
-  max-width: 100%; /* Ограничим ширину видео, чтобы оно не выходило за пределы экрана */
-  height: auto; /* Автоматически подстраиваем высоту для сохранения пропорций */
+  width: 100%; /* Видео адаптируется по ширине контейнера */
+  max-width: 700px; /* Ограничим максимальную ширину на больших экранах */
+  max-height: 400px; /* Ограничим максимальную высоту */
+  height: auto; /* Высота подстраивается для сохранения пропорций */
 }
 
 @media (max-width: 768px) {
   .login-image video {
     width: 100%; /* На мобильных устройствах видео будет занимать всю ширину контейнера */
-    height: auto; /* Пропорции видео сохранятся */
+    height: auto; /* Пропорции сохраняются */
   }
 }
+
 
 
 
