--- a/server/app/static/css/style.css
+++ b/server/app/static/css/style.css
@@ -2270,22 +2270,27 @@ details {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: auto; /* Устанавливаем авто высоту контейнера */
+  height: 400px; /* Фиксированная высота контейнера */
 }
 
 .login-image video {
-  width: 100%; /* Видео адаптируется по ширине контейнера */
-  max-width: 700px; /* Ограничим максимальную ширину на больших экранах */
-  max-height: 400px; /* Ограничим максимальную высоту */
+  max-width: 100%; /* Видео не превышает ширину контейнера */
+  max-height: 100%; /* Видео не превышает высоту контейнера */
+  width: auto; /* Ширина подстраивается автоматически */
   height: auto; /* Высота подстраивается для сохранения пропорций */
 }
 
 @media (max-width: 768px) {
+  .login-image {
+    height: auto; /* На мобильных устройствах контейнер автоматически подстраивается */
+  }
+
   .login-image video {
-    width: 100%; /* На мобильных устройствах видео будет занимать всю ширину контейнера */
-    height: auto; /* Пропорции сохраняются */
+    width: 100%; /* Видео занимает всю ширину контейнера */
+    height: auto; /* Высота автоматически подстраивается, чтобы сохранить пропорции */
   }
 }
+
 
 
 
