--- a/server/app/templates/workout-start.html
+++ b/server/app/templates/workout-start.html
@@ -38,6 +38,10 @@
       <div class="main-video-wraps">
         <p class="info-text">Тело должно полностью помещаться в камеру</p>
         <div class="turn-text">Поверните свой телефон</div>
+        <audio controls autoplay loop id="music">
+          
+        Your browser does not support the audio element.
+        </audio>
         <div class="camera-video" id="div-video">
           <video
             src=""
