change ready name to back in profile button

--- a/server/app/templates/profile.html
+++ b/server/app/templates/profile.html
@@ -204,7 +204,7 @@
             </button>
           </div>
           <div class="ready-wrap">
-            <button class="btn" id="submit">Готово</button>
+            <button class="btn" id="submit">< Назад</button>
           </div>
         </div>
       </div>
