--- a/server/app/templates/workout-start.html
+++ b/server/app/templates/workout-start.html
@@ -73,7 +73,7 @@
         <div class="workout-name-wrap">
           <h5 type="exercise-name">Планка</h5>
           <div class="video-wrap">
-            <video id="helper-video" class="img-responsive">
+            <video id="helper-video" class="img-responsive" loop>
                 Your browser does not support the video tag.
             </video>
           </div>
