fix screen in iPad

--- a/server/app/static/css/workout_start.css
+++ b/server/app/static/css/workout_start.css
@@ -18,6 +18,25 @@
   stroke: grey;
 }
 
+.video-wrap {
+    width: 100%; /* Контейнер занимает всю доступную ширину */
+    height: auto; /* Автоматическая подстройка высоты */
+    max-width: 100%; /* Ограничение по максимальной ширине */
+    overflow: hidden; /* Обрезка содержимого, выходящего за пределы */
+}
+
+video {
+    width: 100%; /* Видео растягивается на всю ширину контейнера */
+    height: auto; /* Автоматическая подстройка высоты */
+    object-fit: cover; /* Сохраняет пропорции, при необходимости обрезает края */
+}
+
+/* Кнопка завершения может быть адаптирована под мобильные устройства */
+#complete-btn {
+    display: block;
+    margin: 10px auto; /* Центрирование кнопки */
+}
+
 .base-timer__path-remaining {
   stroke-width: 7px;
   stroke-linecap: round;
