--- a/server/app/templates/subscribe.html
+++ b/server/app/templates/subscribe.html
@@ -293,10 +293,16 @@
         ]
 
         function sendPayment(data) {
-            fetch('/api/v1/transactions', {
+            const token = getCookie("access_token");
+            if (!token) {
+              window.location.href = "/login";
+              return;
+            }
+            fetch('/api/v1/transactions/', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
+                     Authorization: `Bearer ${token}`,
                 },
                 body: JSON.stringify(data)
             })
