turn on pay fix header

--- a/server/app/templates/subscribe.html
+++ b/server/app/templates/subscribe.html
@@ -301,7 +301,7 @@
             fetch('/api/v1/transactions/', {
                 method: 'POST',
                 headers: {
-                    'Content-Type': 'application/json'
+                    'Content-Type': 'application/json',
                      Authorization: `Bearer ${token}`,
                 },
                 body: JSON.stringify(data)
