turn on add get_cookie

--- a/server/app/templates/subscribe.html
+++ b/server/app/templates/subscribe.html
@@ -292,6 +292,17 @@
             {'name': '12 month', 'price': '7850', 'description': 'Оплата подписка FitIt на год'}
         ]
 
+        function getCookie(cName) {
+          const name = cName + "=";
+          const cDecoded = decodeURIComponent(document.cookie);
+          const cArr = cDecoded.split("; ");
+          let res;
+          cArr.forEach((val) => {
+            if (val.indexOf(name) === 0) res = val.substring(name.length);
+          });
+          return res;
+        }
+
         function sendPayment(data) {
             const token = getCookie("access_token");
             if (!token) {
