fix transaction schema

--- a/server/app/templates/subscribe.html
+++ b/server/app/templates/subscribe.html
@@ -286,10 +286,10 @@
         const checkbox = document.getElementById('agreeCheckbox');
         const links = document.querySelectorAll('.submitbutton');
         const pays = [
-            {'name': '1 month', 'price': '1950', 'description': 'Оплата подписка FitIt на 1 месяц'},
-            {'name': '3 month', 'price': '3900', 'description': 'Оплата подписка FitIt на 3 месяца'},
-            {'name': '6 month', 'price': '5850', 'description': 'Оплата подписка FitIt на 6 месяца'},
-            {'name': '12 month', 'price': '7850', 'description': 'Оплата подписка FitIt на год'}
+            {'price': '1950', 'name': '1 month', 'description': 'Оплата подписка FitIt на 1 месяц'},
+            {'price': '3900', 'name': '3 month', 'description': 'Оплата подписка FitIt на 3 месяца'},
+            {'price': '5850', 'name': '6 month', 'description': 'Оплата подписка FitIt на 6 месяца'},
+            {'price': '7850', 'name': '12 month', 'description': 'Оплата подписка FitIt на год'}
         ]
 
         function getCookie(cName) {
