add timeout to result urls

--- a/server/app/templates/success.html
+++ b/server/app/templates/success.html
@@ -1,15 +1,33 @@
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet" />
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />
+<!doctype html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Success</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet" />
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />
     <link href="../static/css/success.css" rel="stylesheet" />
 </head>
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-md-5">
-            <div class="message-box _success">
-                 <i class="fa fa-check-circle" aria-hidden="true"></i>
-                <h2> Your payment was successful </h2>
-               <p> Thank you for your payment! </p>      
-        </div> 
-    </div> 
-</div> 
+<body>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-5">
+                <div class="message-box _success">
+                     <i class="fa fa-check-circle" aria-hidden="true"></i>
+                    <h2> Your payment was successful </h2>
+                   <p> Thank you for your payment! </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script>
+        window.onload = function() {
+            setTimeout(function() {
+                window.location.href = "/";
+            }, 5000); // 5000 миллисекунд = 5 секунд
+        };
+    </script>
+</body>
+</html>
