--- a/server/app/templates/failed.html
+++ b/server/app/templates/failed.html
@@ -13,4 +13,11 @@
  
     </div> 
 </div> 
-</div> 
+</div>
+<script>
+    window.onload = function() {
+        setTimeout(function() {
+            window.location.href = "/";
+        }, 5000); // 5000 миллисекунд = 5 секунд
+    };
+</script>
