--- a/server/app/templates/success.html
+++ b/server/app/templates/success.html
@@ -25,7 +25,7 @@
     <script>
         window.onload = function() {
             setTimeout(function() {
-                window.location.href = "/";
+                window.location.href = "/dashboard";
             }, 5000); // 5000 миллисекунд = 5 секунд
         };
     </script>
