--- a/server/app/static/css/workout_start.css
+++ b/server/app/static/css/workout_start.css
@@ -19,22 +19,27 @@
 }
 
 /* Обновляем стили для .video-wrap */
+./* Общий стиль для видео */
 .video-wrap {
-    position: relative;
-    width: 100%;
-    overflow: hidden;
-    padding-top: 56.25%; /* Соотношение сторон 16:9, можно изменить при необходимости */
+  position: relative;
+  width: 100%;
+  overflow: hidden;
 }
 
-/* Обновляем стили для видео внутри .video-wrap */
+/* Устанавливаем высоту и поведение для десктопов */
 .video-wrap video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: contain; /* Можно использовать 'cover', 'fill' или 'contain' в зависимости от желаемого эффекта */
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
+
+/* Специальный стиль для мобильных устройств */
+@media (max-width: 768px) {
+  .video-wrap {
+      height: 300px; /* Задайте фиксированную высоту, чтобы ограничить размер видео */
+  }
+}
+
 
 /* Кнопка завершения */
 #complete-btn {
