--- a/server/app/static/css/workout_start.css
+++ b/server/app/static/css/workout_start.css
@@ -30,13 +30,14 @@
 .video-wrap video {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 /* Специальный стиль для мобильных устройств */
 @media (max-width: 768px) {
-  .video-wrap {
-      height: 400px; /* Задайте фиксированную высоту, чтобы ограничить размер видео */
+  .video-wrap video {
+      transform: scale(0.8) translateY(-5%); /* Уменьшаем и сдвигаем вверх только на телефоне */
+      transform-origin: center; /* Центрируем точку масштабирования */
   }
 }
 
